# ansible-role-homebrew

./: .ansible-lint  .gitmodules  .later.yml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Makefile  README.md  ansible.cfg  package.json  pyproject.toml
.github/scripts/: clean-instance.sh  uninstall-homebrew.sh
.github/workflows/: ci.yml  release-please.yml
contrib/poetry-bin/: install.sh
defaults/: main.yml
files/: uninstall-homebrew.sh
handlers/: main.yml
meta/: main.yml
molecule/_partials/playbooks/: converge-local.yml  converge.yml  verify.yml
molecule/_partials/playbooks/defaults/: _main.yml  main.yml
molecule/_partials/tasks/: setup.yml
molecule/_partials/vars/: main.yml
molecule/default/: converge.yml  create.yml  molecule.yml  prepare.yml  verify.yml
molecule/default-macos-on-localhost/: ansible.cfg  molecule.yml
molecule/default-macos-over-ssh/: molecule.yml
tasks/: install.yml  main.yml  pre-facts.yml  update.yml
tasks/_partials/: analytics.yml  cask.yml  configure-path.yml  install-arm64.yml  install-reqs.yml  install-x86.yml  package.yml  tap.yml
tests/: ansible.cfg  gettext-symlinks.sh  requirements.yml  test.yml  uninstall-homebrew.sh
tests/defaults/: main.yml
vars/: main.yml
